# shorelark

./: .gitignore  README.md
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  individual.rs  lib.rs  mutation.rs  selection.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian.rs  guassian.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
